* Thu Apr 27 2006 Brendan O'Dea <bod@optus.net> 2.2.0
- Only poll clifd if successfully bound.
- Add "Practical VPNs" document from Liran Tal as Docs/vpn .
- Add Multilink support from Khaled Al Hamwi.

* Tue Apr 18 2006 Brendan O'Dea <bod@optus.net> 2.1.18
- Don't shutdown on TerminateReq, wait for CDN.
- Interpret "local" direction correctly (as LAC) in disconnect AVPs.

* Thu Apr 13 2006 Brendan O'Dea <bod@optus.net> 2.1.17
- Fix IPCP length test to allow Terminate-Request (4 bytes).
- Send nsctl responses back using the correct source address (thanks ltd).
- Similarly set the source for DAE responses; use bind_address when
  handling forwarded packets on the master.
- Add Acct-Terminate-Cause to RADIUS stop records.

* Thu Feb 23 2006 Brendan O'Dea <bod@optus.net> 2.1.16
- Send configured magic-no in LCP EchoReq when LCP is opened.
- Correct addition of single IP to pool (Jonathan Yarden).
- Ensure session changes from LCP ConfigReq/ConfigNak are sent to cluster.
- Verify that RADIUS packets come from a configured server (Jonathan Yarden).
- Avoid endless loop in processipcp, processipv6cp.
- Additional length checks in processlcp.
- Allow peer to request a new magic-number, or to disable magic-numbers.
- Decrease ip_conntrack_tcp_timeout_established to 5hrs (table filling).

* Mon Dec 19 2005 Brendan O'Dea <bod@optus.net> 2.1.15
- Drop backtrace.
- Reduce logging of LCP EchoReply packets.
- Break LCP configure loop with shutdown.
- Limit value of MRU of 1492 (rfc2516).
- Tun MTU should be MRU (not MRU+4).
- Add Service-Type/Framed-Protocol to RADIUS records (Paul Martin).

* Fri Dec 9 2005 Brendan O'Dea <bod@optus.net> 2.1.14
- Run PLUGIN_RADIUS_ACCOUNT for Start records.

* Wed Dec 7 2005 Brendan O'Dea <bod@optus.net> 2.1.13
- Add test/ping-sweep.
- Apply spec changes from Charlie Brady: use License header, change
  BuildRoot to include username.
- Fix IPCP negotiation of secondary DNS server, reported by Jon Morby.