@@ -2,7 +2,7 @@
 .de Id
 .ds Dt \\$4 \\$5
 ..
-.Id $Id: startup-config.5,v 1.16 2006-04-27 09:53:50 bodea Exp $
+.Id $Id: startup-config.5,v 1.17 2006-04-27 14:38:14 bodea Exp $
 .TH STARTUP-CONFIG 5 "\*(Dt" L2TPNS "File Formats and Conventions"
 .SH NAME
 startup\-config \- configuration file for l2tpns
@@ -151,10 +151,6 @@ session requires two buckets (in and out).
 .B accounting_dir
 If set to a directory, then every 5 minutes the current usage for
 every connected use will be dumped to a file in this directory.
-.TP
-.B setuid
-After starting up and binding the interface, change UID to this.  This
-doesn't work properly.
 .TP
 .B dump_speed
 If set to true, then the current bandwidth utilization will be logged
