@@ -62,9 +62,6 @@ set accounting_dir "/var/run/l2tpns/acct"
 # Number of buckets to allocate for throttling
 #set throttle_buckets 3000
 
-# If set to anything other than 0, setuid when initialised.
-#set setuid 0
-
 # If set to true, dump current speed to stderr every second
 #set dump_speed no
 
