@@ -1,7 +1,8 @@
-* Thu Apr 27 2006 Brendan O'Dea <bod@optus.net> 2.2.0
+* Fri Apr 28 2006 Brendan O'Dea <bod@optus.net> 2.2.0
 - Only poll clifd if successfully bound.
 - Add "Practical VPNs" document from Liran Tal as Docs/vpn .
 - Add Multilink support from Khaled Al Hamwi.
+- Remove non-working setuid option.
 
 * Tue Apr 18 2006 Brendan O'Dea <bod@optus.net> 2.1.18
 - Don't shutdown on TerminateReq, wait for CDN.
